--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -1881,7 +1881,7 @@ without specifying the programming artifact within which that construct occurs.
 an array of <span data-line="30;document\CoreFormat.mdk:1061"></span><code class="code code1">logicalLocationComponent</code><span data-line="30;document\CoreFormat.mdk:1061"></span> objects (<span data-line="30;document\CoreFormat.mdk:1061"></span>&#167;<span data-line="30;document\CoreFormat.mdk:1061"></span><a href="#logicallocationcomponent" title="6.16.&#8194;logicalLocationComponent object" class="localref" style="target-element:h2"><span class="heading-label">6.16</span></a><span data-line="30;document\CoreFormat.mdk:1061"></span>).
 This allows reference to results which occur in nested logical components, for example,
 a method nested within a class which is in turn nested within a namespace.
-When a result occurrs in such a nested construct, the first <span data-line="30;document\CoreFormat.mdk:1064"></span><code class="code code1">logicalLocationComponent</code><span data-line="30;document\CoreFormat.mdk:1064"></span> object in the array shall refer to
+When a result occurs in such a nested construct, the first <span data-line="30;document\CoreFormat.mdk:1064"></span><code class="code code1">logicalLocationComponent</code><span data-line="30;document\CoreFormat.mdk:1064"></span> object in the array shall refer to
 the outermost construct,
 the next element shall refer to a construct nested immediately within the first construct,
 and so on, with the last element referring to the most deeply nested construct.
