Fix important typo: uri of nested file _shall_ be present
... not "may" be present, if the location can be expressed by
means of a path.

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -1311,7 +1311,7 @@ If absent, it shall be interpreted as being equal to the value it would be requi
 </p>
 <p class="p indent" data-line="30;document/CoreFormat.mdk:568"><span data-line="30;document/CoreFormat.mdk:568"></span>If the <span data-line="30;document/CoreFormat.mdk:568"></span><code class="code code1">file</code><span data-line="30;document/CoreFormat.mdk:568"></span> object represents a nested file, and if the location of the nested file
 within its containing file can be expressed by means of a path within its containing file,
-then the <span data-line="30;document/CoreFormat.mdk:570"></span><code class="code code1">uri</code><span data-line="30;document/CoreFormat.mdk:570"></span> property may be present, and its value shall be a valid relative URI expressing that path.
+then the <span data-line="30;document/CoreFormat.mdk:570"></span><code class="code code1">uri</code><span data-line="30;document/CoreFormat.mdk:570"></span> property shall be present, and its value shall be a valid relative URI expressing that path.
 </p>
 <p class="p indent" data-line="30;document/CoreFormat.mdk:572"><span data-line="30;document/CoreFormat.mdk:572"></span>If the location of the nested file within its containing file cannot be expressed by means of a path,
 then the <span data-line="30;document/CoreFormat.mdk:573"></span><code class="code code1">uri</code><span data-line="30;document/CoreFormat.mdk:573"></span> property shall be absent.
