Fix a typo (IsoNumberedNote => IsoNote)

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -1160,8 +1160,8 @@ the binary files produced by a build.
     }
   }
 ]</code></pre></div>
-<div class="isonumberednote block" data-line="30;document\CoreFormat.mdk:123" style="font-size:small">
-<p class="para-continue" data-line="30;document\CoreFormat.mdk:124"><span data-line="30;document\CoreFormat.mdk:124"></span><span class="example-before">NOTE&#160;<span class="example-label">1</span>&#160;&#160;&#160;</span><span data-line="30;document\CoreFormat.mdk:124"></span>There are various reasons for providing URI base id properties:
+<div class="isonote block" data-line="30;document\CoreFormat.mdk:123" style="font-size:small">
+<p class="para-continue" data-line="30;document\CoreFormat.mdk:124"><span data-line="30;document\CoreFormat.mdk:124"></span><span class="example-before">NOTE&#160;&#160;&#160;</span><span data-line="30;document\CoreFormat.mdk:124"></span>There are various reasons for providing URI base id properties:
 </p>
 <ol class="ol loose" data-line="30;document\CoreFormat.mdk:126">
 <li class="li ol-li loose-li" data-line="30;document\CoreFormat.mdk:126">
